--- a/0 - Getting the data.ipynb
+++ b/0 - Getting the data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "[1830 rows x 14 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "       [-0.00019389,  0.00022951,  0.00012029,  0.00046827,  0.0010795 ]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,14 +407,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'Asset': 'ETHBTC', 'Open': 0.067361}, {'Asset': 'LTCBTC', 'Open': 0.002689}, {'Asset': 'BNBBTC', 'Open': 0.014126}, {'Asset': 'NEOBTC', 'Open': 0.000407}, {'Asset': 'QTUMETH', 'Open': 0.002023}]\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9k/xq3jd5c90w93s6tc_cws222r0000gn/T/ipykernel_20449/274899563.py:1: FutureWarning: The provided callable <built-in function max> is currently using SeriesGroupBy.max. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"max\" instead.\n",
+      "/var/folders/9k/xq3jd5c90w93s6tc_cws222r0000gn/T/ipykernel_85410/1294053305.py:1: FutureWarning: The provided callable <built-in function max> is currently using SeriesGroupBy.max. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"max\" instead.\n",
       "  filter = data.groupby(\"Asset\").agg({\"Open time\":max}).reset_index()\n"
      ]
     }
@@ -422,7 +429,9 @@
    "source": [
     "filter = data.groupby(\"Asset\").agg({\"Open time\":max}).reset_index()\n",
     "costs = data.merge(filter, how='inner').drop_duplicates()\n",
-    "cost_list = costs[[\"Asset\",\"Open\"]].to_dict('records')"
+    "#print(costs)\n",
+    "cost_list = costs[[\"Asset\",\"Open\"]].to_dict('records')\n",
+    "print(cost_list)"
    ]
   },
   {
@@ -434,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
