--- a/1 - Stating the problem.ipynb
+++ b/1 - Stating the problem.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -93,11 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cvxpy as cp\n",
+    "import numpy \n",
     "\n",
     "# Our solution variable\n",
     "x_val = cp.Variable(len(returns), boolean=True)\n",
@@ -118,26 +119,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.023743867874145508\n",
-      "CPU times: user 6.35 ms, sys: 11.7 ms, total: 18 ms\n",
-      "Wall time: 24.6 ms\n"
+      "0.0023699999999999832\n",
+      "CPU times: user 2.15 ms, sys: 346 µs, total: 2.5 ms\n",
+      "Wall time: 2.28 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "import time\n",
-    "start = time.time()\n",
+    "start = time.process_time()\n",
     "theta.value = 0.03 # This is related to the risk penalty lagrangian\n",
     "prob.solve(solver='ECOS_BB')\n",
-    "end = time.time()\n",
+    "end = time.process_time()\n",
     "print(end-start)"
    ]
   },
