--- a/1 - Stating the problem.ipynb
+++ b/1 - Stating the problem.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.04 s, sys: 30.9 ms, total: 1.07 s\n",
+      "Wall time: 1.06 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function print>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "import csv\n",
+    "import time\n",
+    "i = 0\n",
+    "with open('number.csv', 'w', newline='') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    field = [\"number\", \"time\"]\n",
+    "    while i<1000:\n",
+    "        i = i + 1\n",
+    "        start = time.process_time()\n",
+    "        theta.value = 0.03\n",
+    "        prob.solve(solver='ECOS_BB')\n",
+    "        end = time.process_time()\n",
+    "        writer.writerow(field)\n",
+    "        writer.writerow([i, end-start])\n",
+    "print\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,16 +178,17 @@
    "source": [
     "%%time\n",
     "import time\n",
-    "start = time.process_time()\n",
-    "theta.value = 0.03 # This is related to the risk penalty lagrangian\n",
-    "prob.solve(solver='ECOS_BB')\n",
-    "end = time.process_time()\n",
+    "while(i<1000):\n",
+    "    start = time.process_time()\n",
+    "    theta.value = 0.03 # This is related to the risk penalty lagrangian\n",
+    "    prob.solve(solver='ECOS_BB')\n",
+    "    end = time.process_time()\n",
     "print(end-start)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
