--- a/1 - Stating the problem.ipynb
+++ b/1 - Stating the problem.ipynb
@@ -119,71 +119,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.04 s, sys: 30.9 ms, total: 1.07 s\n",
-      "Wall time: 1.06 s\n"
+      "0.0010458399999999659\n",
+      "0.0002621127954097583\n",
+      "CPU times: user 1.03 s, sys: 20.9 ms, total: 1.06 s\n",
+      "Wall time: 1.07 s\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function print>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
     "import csv\n",
     "import time\n",
+    "import pandas as pd\n",
     "i = 0\n",
     "with open('number.csv', 'w', newline='') as file:\n",
     "    writer = csv.writer(file)\n",
     "    field = [\"number\", \"time\"]\n",
+    "    writer.writerow(field)\n",
     "    while i<1000:\n",
     "        i = i + 1\n",
     "        start = time.process_time()\n",
-    "        theta.value = 0.03\n",
+    "        theta.value = 0.03 # This is related to the risk penalty lagrangian\n",
     "        prob.solve(solver='ECOS_BB')\n",
     "        end = time.process_time()\n",
-    "        writer.writerow(field)\n",
     "        writer.writerow([i, end-start])\n",
-    "print\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0023699999999999832\n",
-      "CPU times: user 2.15 ms, sys: 346 µs, total: 2.5 ms\n",
-      "Wall time: 2.28 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "import time\n",
-    "while(i<1000):\n",
-    "    start = time.process_time()\n",
-    "    theta.value = 0.03 # This is related to the risk penalty lagrangian\n",
-    "    prob.solve(solver='ECOS_BB')\n",
-    "    end = time.process_time()\n",
-    "print(end-start)"
+    "data1 = pd.read_csv('number.csv')\n",
+    "print(data1['time'].mean())\n",
+    "print(data1['time'].std())"
    ]
   },
   {
