--- a/tets g2/result g2 6 assets/g2_6 Getting the data.ipynb
+++ b/tets g2/result g2 6 assets/g2_6 Getting the data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -61,11 +61,11 @@
        "      <td>0.066299</td>\n",
        "      <td>0.062904</td>\n",
        "      <td>0.065148</td>\n",
-       "      <td>219179.4803</td>\n",
+       "      <td>2.191795e+05</td>\n",
        "      <td>1634860799999</td>\n",
-       "      <td>14185.381377</td>\n",
+       "      <td>14185.381380</td>\n",
        "      <td>441192</td>\n",
-       "      <td>100293.9821</td>\n",
+       "      <td>1.002940e+05</td>\n",
        "      <td>6492.487566</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -78,11 +78,11 @@
        "      <td>0.065960</td>\n",
        "      <td>0.064685</td>\n",
        "      <td>0.065446</td>\n",
-       "      <td>97034.6275</td>\n",
+       "      <td>9.703463e+04</td>\n",
        "      <td>1634947199999</td>\n",
        "      <td>6338.327303</td>\n",
        "      <td>199872</td>\n",
-       "      <td>52745.0758</td>\n",
+       "      <td>5.274508e+04</td>\n",
        "      <td>3446.038753</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -95,11 +95,11 @@
        "      <td>0.068079</td>\n",
        "      <td>0.065181</td>\n",
        "      <td>0.067997</td>\n",
-       "      <td>78071.8103</td>\n",
+       "      <td>7.807181e+04</td>\n",
        "      <td>1635033599999</td>\n",
        "      <td>5183.565102</td>\n",
        "      <td>170954</td>\n",
-       "      <td>39062.4171</td>\n",
+       "      <td>3.906242e+04</td>\n",
        "      <td>2593.452923</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -112,11 +112,11 @@
        "      <td>0.068163</td>\n",
        "      <td>0.066101</td>\n",
        "      <td>0.067079</td>\n",
-       "      <td>75865.3395</td>\n",
+       "      <td>7.586534e+04</td>\n",
        "      <td>1635119999999</td>\n",
        "      <td>5087.916649</td>\n",
        "      <td>161735</td>\n",
-       "      <td>36494.9300</td>\n",
+       "      <td>3.649493e+04</td>\n",
        "      <td>2447.367339</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -129,11 +129,11 @@
        "      <td>0.067245</td>\n",
        "      <td>0.065269</td>\n",
        "      <td>0.066897</td>\n",
-       "      <td>83641.3418</td>\n",
+       "      <td>8.364134e+04</td>\n",
        "      <td>1635206399999</td>\n",
        "      <td>5546.270472</td>\n",
        "      <td>180063</td>\n",
-       "      <td>41199.6332</td>\n",
+       "      <td>4.119963e+04</td>\n",
        "      <td>2731.174031</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -155,93 +155,93 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1825</th>\n",
+       "      <th>2191</th>\n",
        "      <td>361</td>\n",
-       "      <td>QTUMETH</td>\n",
+       "      <td>LOOMBTC</td>\n",
        "      <td>1665964800000</td>\n",
-       "      <td>0.002043</td>\n",
-       "      <td>0.002058</td>\n",
-       "      <td>0.002038</td>\n",
-       "      <td>0.002053</td>\n",
-       "      <td>1748.5000</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>4.744341e+07</td>\n",
        "      <td>1666051199999</td>\n",
-       "      <td>3.577257</td>\n",
-       "      <td>55</td>\n",
-       "      <td>629.4000</td>\n",
-       "      <td>1.289472</td>\n",
+       "      <td>129.065254</td>\n",
+       "      <td>13690</td>\n",
+       "      <td>2.295153e+07</td>\n",
+       "      <td>62.933081</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1826</th>\n",
+       "      <th>2192</th>\n",
        "      <td>362</td>\n",
-       "      <td>QTUMETH</td>\n",
+       "      <td>LOOMBTC</td>\n",
        "      <td>1666051200000</td>\n",
-       "      <td>0.002053</td>\n",
-       "      <td>0.002059</td>\n",
-       "      <td>0.002020</td>\n",
-       "      <td>0.002054</td>\n",
-       "      <td>2889.4000</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>2.686088e+07</td>\n",
        "      <td>1666137599999</td>\n",
-       "      <td>5.884752</td>\n",
-       "      <td>147</td>\n",
-       "      <td>795.5000</td>\n",
-       "      <td>1.625642</td>\n",
+       "      <td>69.917328</td>\n",
+       "      <td>6809</td>\n",
+       "      <td>1.220545e+07</td>\n",
+       "      <td>31.913100</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1827</th>\n",
+       "      <th>2193</th>\n",
        "      <td>363</td>\n",
-       "      <td>QTUMETH</td>\n",
+       "      <td>LOOMBTC</td>\n",
        "      <td>1666137600000</td>\n",
-       "      <td>0.002052</td>\n",
-       "      <td>0.002063</td>\n",
-       "      <td>0.002005</td>\n",
-       "      <td>0.002011</td>\n",
-       "      <td>3764.5000</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>6.054445e+06</td>\n",
        "      <td>1666223999999</td>\n",
-       "      <td>7.690868</td>\n",
-       "      <td>128</td>\n",
-       "      <td>1750.6000</td>\n",
-       "      <td>3.577481</td>\n",
+       "      <td>15.126751</td>\n",
+       "      <td>1519</td>\n",
+       "      <td>2.269257e+06</td>\n",
+       "      <td>5.706104</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1828</th>\n",
+       "      <th>2194</th>\n",
        "      <td>364</td>\n",
-       "      <td>QTUMETH</td>\n",
+       "      <td>LOOMBTC</td>\n",
        "      <td>1666224000000</td>\n",
-       "      <td>0.002017</td>\n",
-       "      <td>0.002057</td>\n",
-       "      <td>0.002013</td>\n",
-       "      <td>0.002030</td>\n",
-       "      <td>3651.6000</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>3.657251e+06</td>\n",
        "      <td>1666310399999</td>\n",
-       "      <td>7.457298</td>\n",
-       "      <td>152</td>\n",
-       "      <td>1642.9000</td>\n",
-       "      <td>3.351432</td>\n",
+       "      <td>8.986174</td>\n",
+       "      <td>1068</td>\n",
+       "      <td>1.792142e+06</td>\n",
+       "      <td>4.413974</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1829</th>\n",
+       "      <th>2195</th>\n",
        "      <td>365</td>\n",
-       "      <td>QTUMETH</td>\n",
+       "      <td>LOOMBTC</td>\n",
        "      <td>1666310400000</td>\n",
-       "      <td>0.002023</td>\n",
-       "      <td>0.002033</td>\n",
-       "      <td>0.001993</td>\n",
-       "      <td>0.002021</td>\n",
-       "      <td>4433.3000</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>3.206225e+06</td>\n",
        "      <td>1666396799999</td>\n",
-       "      <td>8.922277</td>\n",
-       "      <td>182</td>\n",
-       "      <td>2542.3000</td>\n",
-       "      <td>5.121765</td>\n",
+       "      <td>7.739278</td>\n",
+       "      <td>970</td>\n",
+       "      <td>9.477100e+05</td>\n",
+       "      <td>2.289788</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1830 rows × 14 columns</p>\n",
+       "<p>2196 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -252,42 +252,42 @@
        "3              3   ETHBTC  1635033600000  0.067998  0.068163  0.066101   \n",
        "4              4   ETHBTC  1635120000000  0.067081  0.067245  0.065269   \n",
        "...          ...      ...            ...       ...       ...       ...   \n",
-       "1825         361  QTUMETH  1665964800000  0.002043  0.002058  0.002038   \n",
-       "1826         362  QTUMETH  1666051200000  0.002053  0.002059  0.002020   \n",
-       "1827         363  QTUMETH  1666137600000  0.002052  0.002063  0.002005   \n",
-       "1828         364  QTUMETH  1666224000000  0.002017  0.002057  0.002013   \n",
-       "1829         365  QTUMETH  1666310400000  0.002023  0.002033  0.001993   \n",
+       "2191         361  LOOMBTC  1665964800000  0.000002  0.000003  0.000002   \n",
+       "2192         362  LOOMBTC  1666051200000  0.000003  0.000003  0.000002   \n",
+       "2193         363  LOOMBTC  1666137600000  0.000003  0.000003  0.000002   \n",
+       "2194         364  LOOMBTC  1666224000000  0.000002  0.000003  0.000002   \n",
+       "2195         365  LOOMBTC  1666310400000  0.000002  0.000002  0.000002   \n",
        "\n",
-       "         Close       Volume   Closing time  Quote asset vol  Num traders  \\\n",
-       "0     0.065148  219179.4803  1634860799999     14185.381377       441192   \n",
-       "1     0.065446   97034.6275  1634947199999      6338.327303       199872   \n",
-       "2     0.067997   78071.8103  1635033599999      5183.565102       170954   \n",
-       "3     0.067079   75865.3395  1635119999999      5087.916649       161735   \n",
-       "4     0.066897   83641.3418  1635206399999      5546.270472       180063   \n",
-       "...        ...          ...            ...              ...          ...   \n",
-       "1825  0.002053    1748.5000  1666051199999         3.577257           55   \n",
-       "1826  0.002054    2889.4000  1666137599999         5.884752          147   \n",
-       "1827  0.002011    3764.5000  1666223999999         7.690868          128   \n",
-       "1828  0.002030    3651.6000  1666310399999         7.457298          152   \n",
-       "1829  0.002021    4433.3000  1666396799999         8.922277          182   \n",
+       "         Close        Volume   Closing time  Quote asset vol  Num traders  \\\n",
+       "0     0.065148  2.191795e+05  1634860799999     14185.381380       441192   \n",
+       "1     0.065446  9.703463e+04  1634947199999      6338.327303       199872   \n",
+       "2     0.067997  7.807181e+04  1635033599999      5183.565102       170954   \n",
+       "3     0.067079  7.586534e+04  1635119999999      5087.916649       161735   \n",
+       "4     0.066897  8.364134e+04  1635206399999      5546.270472       180063   \n",
+       "...        ...           ...            ...              ...          ...   \n",
+       "2191  0.000003  4.744341e+07  1666051199999       129.065254        13690   \n",
+       "2192  0.000003  2.686088e+07  1666137599999        69.917328         6809   \n",
+       "2193  0.000002  6.054445e+06  1666223999999        15.126751         1519   \n",
+       "2194  0.000002  3.657251e+06  1666310399999         8.986174         1068   \n",
+       "2195  0.000002  3.206225e+06  1666396799999         7.739278          970   \n",
        "\n",
        "      Taker buy base asset vol  Taker buy quote asset vol  To be ignored  \n",
-       "0                  100293.9821                6492.487566              0  \n",
-       "1                   52745.0758                3446.038753              0  \n",
-       "2                   39062.4171                2593.452923              0  \n",
-       "3                   36494.9300                2447.367339              0  \n",
-       "4                   41199.6332                2731.174031              0  \n",
+       "0                 1.002940e+05                6492.487566              0  \n",
+       "1                 5.274508e+04                3446.038753              0  \n",
+       "2                 3.906242e+04                2593.452923              0  \n",
+       "3                 3.649493e+04                2447.367339              0  \n",
+       "4                 4.119963e+04                2731.174031              0  \n",
        "...                        ...                        ...            ...  \n",
-       "1825                  629.4000                   1.289472              0  \n",
-       "1826                  795.5000                   1.625642              0  \n",
-       "1827                 1750.6000                   3.577481              0  \n",
-       "1828                 1642.9000                   3.351432              0  \n",
-       "1829                 2542.3000                   5.121765              0  \n",
+       "2191              2.295153e+07                  62.933081              0  \n",
+       "2192              1.220545e+07                  31.913100              0  \n",
+       "2193              2.269257e+06                   5.706104              0  \n",
+       "2194              1.792142e+06                   4.413974              0  \n",
+       "2195              9.477100e+05                   2.289788              0  \n",
        "\n",
-       "[1830 rows x 14 columns]"
+       "[2196 rows x 14 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv(\"binance_data.csv\")\n",
+    "data = pd.read_csv(\"binance_data6.csv\")\n",
     "data"
    ]
   },
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,8 @@
       "Expected average return for asset LTCBTC is -8.478051504195303e-05\n",
       "Expected average return for asset BNBBTC is 0.0019369845670104667\n",
       "Expected average return for asset NEOBTC is -0.0010735484309001167\n",
-      "Expected average return for asset QTUMETH is -0.0011878855362685353\n"
+      "Expected average return for asset QTUMETH is -0.0011878855362685353\n",
+      "Expected average return for asset LOOMBTC is 0.003263968784562174\n"
      ]
     }
    ],
@@ -376,20 +377,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.00048188,  0.00022357,  0.00019375,  0.00021957, -0.00019389],\n",
-       "       [ 0.00022357,  0.00075058,  0.00022139,  0.00035433,  0.00022951],\n",
-       "       [ 0.00019375,  0.00022139,  0.00050048,  0.00023024,  0.00012029],\n",
-       "       [ 0.00021957,  0.00035433,  0.00023024,  0.00098326,  0.00046827],\n",
-       "       [-0.00019389,  0.00022951,  0.00012029,  0.00046827,  0.0010795 ]])"
+       "array([[ 0.00048188,  0.00022357,  0.00019375,  0.00021957, -0.00019389,\n",
+       "         0.00010709],\n",
+       "       [ 0.00022357,  0.00075058,  0.00022139,  0.00035433,  0.00022951,\n",
+       "         0.00021139],\n",
+       "       [ 0.00019375,  0.00022139,  0.00050048,  0.00023024,  0.00012029,\n",
+       "         0.00021223],\n",
+       "       [ 0.00021957,  0.00035433,  0.00023024,  0.00098326,  0.00046827,\n",
+       "         0.00045428],\n",
+       "       [-0.00019389,  0.00022951,  0.00012029,  0.00046827,  0.0010795 ,\n",
+       "         0.0003405 ],\n",
+       "       [ 0.00010709,  0.00021139,  0.00021223,  0.00045428,  0.0003405 ,\n",
+       "         0.00500931]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,21 +415,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Asset': 'ETHBTC', 'Open': 0.067361}, {'Asset': 'LTCBTC', 'Open': 0.002689}, {'Asset': 'BNBBTC', 'Open': 0.014126}, {'Asset': 'NEOBTC', 'Open': 0.000407}, {'Asset': 'QTUMETH', 'Open': 0.002023}]\n"
+      "[{'Asset': 'ETHBTC', 'Open': 0.067361}, {'Asset': 'LTCBTC', 'Open': 0.002689}, {'Asset': 'BNBBTC', 'Open': 0.014126}, {'Asset': 'NEOBTC', 'Open': 0.000407}, {'Asset': 'QTUMETH', 'Open': 0.002023}, {'Asset': 'LOOMBTC', 'Open': 2.45e-06}]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9k/xq3jd5c90w93s6tc_cws222r0000gn/T/ipykernel_85410/1294053305.py:1: FutureWarning: The provided callable <built-in function max> is currently using SeriesGroupBy.max. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"max\" instead.\n",
+      "/var/folders/9k/xq3jd5c90w93s6tc_cws222r0000gn/T/ipykernel_96116/1294053305.py:1: FutureWarning: The provided callable <built-in function max> is currently using SeriesGroupBy.max. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"max\" instead.\n",
       "  filter = data.groupby(\"Asset\").agg({\"Open time\":max}).reset_index()\n"
      ]
     }
@@ -443,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +461,7 @@
     "data = {\"mu\" : mu, \"sigma\": sigma.tolist(), \"assets\": cost_list} \n",
     "json_object = json.dumps(data, indent = 4)\n",
     "\n",
-    "with open(\"binance-data.json\", \"w\") as file:\n",
+    "with open(\"binance-data6.json\", \"w\") as file:\n",
     "    file.write(json_object)"
    ]
   }
