--- a/tets g2/result g2 6 assets/g2_6 Qiskit for finance.ipynb
+++ b/tets g2/result g2 6 assets/g2_6 Qiskit for finance.ipynb
@@ -11,126 +11,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import qiskit\n",
-    "import typing\n",
-    "def compose_circuit(qcs: typing.List[qiskit.QuantumCircuit]) -> qiskit.QuantumCircuit:\n",
-    "    \"\"\"Combine list of paramerterized quantum circuit into one. It's very helpful!!!\n",
-    "\n",
-    "    Args:\n",
-    "        qcs (typing.List[qiskit.QuantumCircuit]): List of quantum circuit\n",
-    "\n",
-    "    Returns:\n",
-    "        qiskit.QuantumCircuit: composed quantum circuit\n",
-    "    \"\"\"\n",
-    "    qc = qiskit.QuantumCircuit(qcs[0].num_qubits)\n",
-    "    i = 0\n",
-    "    num_params = 0\n",
-    "    for sub_qc in qcs:\n",
-    "        num_params += len(sub_qc.parameters)\n",
-    "    thetas = qiskit.circuit.ParameterVector('theta', num_params)\n",
-    "    for sub_qc in qcs:\n",
-    "        for instruction in sub_qc:\n",
-    "            if len(instruction[0].params) == 1:\n",
-    "                instruction[0].params[0] = thetas[i]\n",
-    "                i += 1\n",
-    "            if len(instruction[0].params) == 3:\n",
-    "                instruction[0].params[0] = thetas[i:i+1]\n",
-    "                i += 2\n",
-    "            qc.append(instruction[0], instruction[1])\n",
-    "    qc.draw()\n",
-    "    return qc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def g2(num_qubits: int, num_layers: int) -> qiskit.QuantumCircuit:\n",
-    "    \"\"\"_summary_\n",
-    "\n",
-    "    Args:\n",
-    "        num_qubits (int): _description_\n",
-    "        num_layers (int): _description_\n",
-    "\n",
-    "    Returns:\n",
-    "        qiskit.QuantumCircuit: parameterized quantum circuit\n",
-    "    \"\"\"\n",
-    "    qc = qiskit.QuantumCircuit(num_qubits)\n",
-    "    thetas = qiskit.circuit.ParameterVector(\n",
-    "        'theta', 2 * num_qubits * num_layers)\n",
-    "    j = 0\n",
-    "    for _ in range(num_layers):\n",
-    "        for i in range(num_qubits):\n",
-    "            qc.ry(thetas[j], i)\n",
-    "            j += 1\n",
-    "        for i in range(0, num_qubits - 1, 2):\n",
-    "            qc.cz(i, i + 1)\n",
-    "        for i in range(num_qubits):\n",
-    "            qc.ry(thetas[j], i)\n",
-    "            j += 1\n",
-    "        for i in range(1, num_qubits - 1, 2):\n",
-    "            qc.cz(i, i + 1)\n",
-    "        qc.cz(0, num_qubits - 1)\n",
-    "    return qc\n",
-    "\n",
-    "\n",
-    "def gn(num_qubits: int, num_layers: int) -> qiskit.QuantumCircuit:\n",
-    "    \"\"\"_summary_\n",
-    "\n",
-    "    Args:\n",
-    "        num_qubits (int): _description_\n",
-    "        num_layers (int): _description_\n",
-    "\n",
-    "    Returns:\n",
-    "        qiskit.QuantumCircuit: parameterized quantum circuit\n",
-    "    \"\"\"\n",
-    "    qc = qiskit.QuantumCircuit(num_qubits, num_qubits)\n",
-    "    for _ in range(0, num_layers):\n",
-    "        qc = compose_circuit([qc, ry_layer(num_qubits), cz_layer(num_qubits)])\n",
-    "    return qc\n",
-    "\n",
-    "\n",
-    "def g2gn(num_qubits: int, num_layers: int) -> qiskit.QuantumCircuit:\n",
-    "    \"\"\"g2 + gn ansatz\n",
-    "\n",
-    "    Args:\n",
-    "        num_qubits (int): _description_\n",
-    "        num_layers (int): _description_\n",
-    "\n",
-    "    Returns:\n",
-    "        qiskit.QuantumCircuit: parameterized quantum circuit\n",
-    "    \"\"\"\n",
-    "    qc = qiskit.QuantumCircuit(num_qubits, num_qubits)\n",
-    "    for _ in range(0, num_layers):\n",
-    "        qc = compose_circuit([qc, g2(num_qubits, 1), gn(num_qubits, 1)])\n",
-    "    return qc\n",
-    "\n",
-    "\n",
-    "def g2gnw(num_qubits: int, num_layers: int) -> qiskit.QuantumCircuit:\n",
-    "    \"\"\"g2 + gn + w ansatz\n",
-    "\n",
-    "    Args:\n",
-    "        num_qubits (int): _description_\n",
-    "        num_layers (int): _description_\n",
-    "\n",
-    "    Returns:\n",
-    "        qiskit.QuantumCircuit: parameterized quantum circuit\n",
-    "    \"\"\"\n",
-    "    qc = qiskit.QuantumCircuit(num_qubits, num_qubits)\n",
-    "    for _ in range(0, num_layers):\n",
-    "        qc = compose_circuit([qc, g2(num_qubits, 1), gn(\n",
-    "            num_qubits, 1), zxz_layer(num_qubits, 1)])\n",
-    "    return qc"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -192,23 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/9k/xq3jd5c90w93s6tc_cws222r0000gn/T/ipykernel_3641/597978851.py:30: DeprecationWarning: The class ``qiskit.algorithms.minimum_eigen_solvers.numpy_minimum_eigen_solver.NumPyMinimumEigensolver`` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. Instead, use the class ``qiskit.algorithms.minimum_eigensolvers.NumPyMinimumEigensolver``. See https://qisk.it/algo_migration for a migration guide.\n",
-      "  exact_mes = NumPyMinimumEigensolver()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#exact_eigensolver\n",
     "from qiskit_optimization.converters import QuadraticProgramToQubo\n",
     "from qiskit_optimization.algorithms import MinimumEigenOptimizer\n",
-    "from qiskit.algorithms import NumPyMinimumEigensolver\n",
+    "from qiskit.algorithms.minimum_eigensolvers import NumPyMinimumEigensolver\n",
     "import time\n",
     "\n",
     "def index_to_selection(i, num_assets):\n",
@@ -241,86 +112,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.020847012999999925\n",
-      "0.005709045607856325\n",
-      "Optimal: selection [1. 0. 1. 0. 0. 1.], value -0.0021\n",
-      "\n",
-      "----------------- Full result ---------------------\n",
-      "selection\tvalue\t\tprobability\n",
-      "---------------------------------------------------\n",
-      "[1 0 1 0 0 1]\t-0.0021\t\t1.0000\n",
-      "[1 1 1 1 1 1]\t9.1500\t\t0.0000\n",
-      "[0 1 1 1 1 0]\t1.0199\t\t0.0000\n",
-      "[0 0 1 1 1 0]\t0.0024\t\t0.0000\n",
-      "[1 1 0 1 1 0]\t1.0210\t\t0.0000\n",
-      "[0 1 0 1 1 0]\t0.0048\t\t0.0000\n",
-      "[1 0 0 1 1 0]\t0.0036\t\t0.0000\n",
-      "[0 0 0 1 1 0]\t1.0199\t\t0.0000\n",
-      "[1 1 1 0 1 0]\t1.0173\t\t0.0000\n",
-      "[0 1 1 0 1 0]\t0.0011\t\t0.0000\n",
-      "[1 0 1 0 1 0]\t-0.0000\t\t0.0000\n",
-      "[0 0 1 0 1 0]\t1.0163\t\t0.0000\n",
-      "[1 1 0 0 1 0]\t0.0023\t\t0.0000\n",
-      "[0 1 0 0 1 0]\t1.0186\t\t0.0000\n",
-      "[1 0 0 0 1 0]\t1.0175\t\t0.0000\n",
-      "[0 0 0 0 1 0]\t4.0664\t\t0.0000\n",
-      "[1 1 1 1 0 0]\t1.0178\t\t0.0000\n",
-      "[0 1 1 1 0 0]\t0.0011\t\t0.0000\n",
-      "[1 0 1 1 0 0]\t0.0003\t\t0.0000\n",
-      "[0 0 1 1 0 0]\t1.0163\t\t0.0000\n",
-      "[1 1 0 1 0 0]\t0.0026\t\t0.0000\n",
-      "[0 1 0 1 0 0]\t1.0185\t\t0.0000\n",
-      "[1 0 0 1 0 0]\t1.0178\t\t0.0000\n",
-      "[0 0 0 1 0 0]\t4.0662\t\t0.0000\n",
-      "[1 1 1 0 0 0]\t-0.0008\t\t0.0000\n",
-      "[0 1 1 0 0 0]\t1.0152\t\t0.0000\n",
-      "[1 0 1 0 0 0]\t1.0145\t\t0.0000\n",
-      "[0 0 1 0 0 0]\t4.0630\t\t0.0000\n",
-      "[1 1 0 0 0 0]\t1.0167\t\t0.0000\n",
-      "[0 1 0 0 0 0]\t4.0651\t\t0.0000\n",
-      "[1 0 0 0 0 0]\t4.0645\t\t0.0000\n",
-      "[1 0 1 1 1 0]\t1.0186\t\t0.0000\n",
-      "[1 1 1 1 1 0]\t4.0686\t\t0.0000\n",
-      "[0 1 1 1 1 1]\t4.0688\t\t0.0000\n",
-      "[0 0 0 0 1 1]\t1.0175\t\t0.0000\n",
-      "[1 0 1 1 1 1]\t4.0675\t\t0.0000\n",
-      "[0 0 1 1 1 1]\t1.0188\t\t0.0000\n",
-      "[1 1 0 1 1 1]\t4.0699\t\t0.0000\n",
-      "[0 1 0 1 1 1]\t1.0212\t\t0.0000\n",
-      "[1 0 0 1 1 1]\t1.0199\t\t0.0000\n",
-      "[0 0 0 1 1 1]\t0.0038\t\t0.0000\n",
-      "[1 1 1 0 1 1]\t4.0659\t\t0.0000\n",
-      "[0 1 1 0 1 1]\t1.0172\t\t0.0000\n",
-      "[1 0 1 0 1 1]\t1.0160\t\t0.0000\n",
-      "[0 0 1 0 1 1]\t-0.0000\t\t0.0000\n",
-      "[1 1 0 0 1 1]\t1.0183\t\t0.0000\n",
-      "[0 1 0 0 1 1]\t0.0022\t\t0.0000\n",
-      "[1 0 0 0 1 1]\t0.0010\t\t0.0000\n",
-      "[1 1 1 1 0 1]\t4.0665\t\t0.0000\n",
-      "[0 0 0 0 0 1]\t4.0639\t\t0.0000\n",
-      "[0 1 1 1 0 1]\t1.0174\t\t0.0000\n",
-      "[1 0 1 1 0 1]\t1.0165\t\t0.0000\n",
-      "[0 0 1 1 0 1]\t0.0000\t\t0.0000\n",
-      "[1 1 0 1 0 1]\t1.0188\t\t0.0000\n",
-      "[0 1 0 1 0 1]\t0.0023\t\t0.0000\n",
-      "[1 0 0 1 0 1]\t0.0014\t\t0.0000\n",
-      "[0 0 0 1 0 1]\t1.0174\t\t0.0000\n",
-      "[1 1 1 0 0 1]\t1.0152\t\t0.0000\n",
-      "[0 1 1 0 0 1]\t-0.0013\t\t0.0000\n",
-      "[0 0 1 0 0 1]\t1.0139\t\t0.0000\n",
-      "[1 1 0 0 0 1]\t0.0001\t\t0.0000\n",
-      "[0 1 0 0 0 1]\t1.0161\t\t0.0000\n",
-      "[1 0 0 0 0 1]\t1.0153\t\t0.0000\n",
-      "[0 0 0 0 0 0]\t9.1455\t\t0.0000\n",
-      "CPU times: user 21.1 s, sys: 176 ms, total: 21.3 s\n",
-      "Wall time: 21.4 s\n"
+      "0.009153177999999958\n",
+      "0.0022522129809650613\n",
+      "Optimal: selection [1. 0. 1. 0. 0. 1.], value -0.0021\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Statevector' object has no attribute 'to_matrix'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:19\u001b[0m\n",
+      "Cell \u001b[0;32mIn[9], line 19\u001b[0m, in \u001b[0;36mprint_result\u001b[0;34m(result)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOptimal: selection \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m, value \u001b[39m\u001b[38;5;132;01m{:.4f}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(selection, value))\n\u001b[1;32m     17\u001b[0m eigenstate \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m.\u001b[39mmin_eigen_solver_result\u001b[38;5;241m.\u001b[39meigenstate\n\u001b[0;32m---> 19\u001b[0m eigenvector \u001b[38;5;241m=\u001b[39m eigenstate \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(eigenstate, np\u001b[38;5;241m.\u001b[39mndarray) \u001b[38;5;28;01melse\u001b[39;00m \u001b[43meigenstate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_matrix\u001b[49m()\n\u001b[1;32m     20\u001b[0m probabilities \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mabs(eigenvector) \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[1;32m     21\u001b[0m i_sorted \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mreversed\u001b[39m(np\u001b[38;5;241m.\u001b[39margsort(probabilities))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Statevector' object has no attribute 'to_matrix'"
      ]
     }
    ],
@@ -1439,7 +1252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
